Fix "other" box display problem on Firefox
Also corrected radio button alignment

--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -46,7 +46,8 @@ $table-dark-row: #f6f6f6;
 
         input:not(.hidden) {
             display: inline;
-            height: 2rem;
+            // height: auto;
+            margin-left: 1rem;
             position: static;
         }
 
